[package]
name = "uuid1"
description = "UUID v1 Batteries"
version = "0.0.2-pre"
license = "MIT/Apache-2.0"
repository = "https://github.com/rushmorem/uuid1"
documentation = "https://docs.rs/uuid1"
readme = "README.md"
keywords = ["uuid"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[features]
serde = ["uuid/serde"]

[dependencies]
chrono = "0.4"
lazy_static = "0.2"
rand = "0.3"
uuid = { version = "0.5", features = ["v1", "v4", "use_std"] }
